--- a/package.json
+++ b/package.json
@@ -3,12 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.7.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "node-sass": "^4.13.1",
+    "oidc-client": "^1.10.1",
+    "prop-types": "^15.7.2",
+    "qs": "^6.9.3",
     "react": "^16.13.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-hook-form": "^5.3.1",
+    "react-infinite-scroller": "^1.2.4",
+    "react-loading-skeleton": "^2.0.1",
+    "react-new-window": "^0.1.2",
+    "react-oauth-popup": "^0.1.0",
+    "react-player": "^1.15.3",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
+    "react-scripts": "3.4.1",
+    "react-scroll-horizontal": "^1.6.4",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-oidc": "^4.0.0-beta1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
