--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "auth0-js": "^9.13.2",
     "axios": "^0.19.2",
+    "javascript-stringify": "^2.0.1",
     "node-sass": "^4.13.1",
     "oidc-client": "^1.10.1",
     "prop-types": "^15.7.2",
@@ -26,9 +28,11 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.1",
     "react-scroll-horizontal": "^1.6.4",
+    "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-oidc": "^4.0.0-beta1",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
